# Pong-SFML

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/Game/: CMakeLists.txt  main.cpp
Source/GameController/: Ball.cpp  Ball.h  CMakeLists.txt  GameController.cpp  GameController.h  GameState.cpp  GameState.h  ResourceManager.cpp  ResourceManager.h
Source/Players/: CMakeLists.txt  Player.cpp  Player.h
Source/SFML/: CMakeLists.txt
Source/Widgets/: CMakeLists.txt  GameResultScreen.cpp  GameResultScreen.h
Source/Window/: App.cpp  App.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h
